--- a/src/webkit-sassui-badge.scss
+++ b/src/webkit-sassui-badge.scss
@@ -1,16 +1,36 @@
 /*webkit-sassui-badge Start*/
-@mixin webkit-sassui-badge($inBgColor:#dd514c,$inColor:#FFF,$inRadius:10px) {
-  //Your mixin code goes here.
+$webkit-sassui-badge-options: (
+  background-color: #dd514c,
+  padding: 0.24em 0.4em,
+  line-height: 1.4em
+) !default;
+
+.webkit-sassui-badge {
+  $background-color: map-get(
+    $map: $webkit-sassui-badge-options,
+    $key: background-color
+  );
+
+  $padding: map-get(
+    $map: $webkit-sassui-badge-options,
+    $key: padding
+  );
+
+  $line-height: map-get(
+    $map: $webkit-sassui-badge-options,
+    $key: line-height
+  );
+
   font-size: 10px;
+  border-radius: 100px;
   display: inline-block;
-  padding: 0.2em 0.4em;
-  font-weight: bold;
-  line-height: 1.4em;
-  color: $inColor;
-  border-radius: $inRadius;
-  white-space: nowrap;
   vertical-align: middle;
-  background-color: $inBgColor;
+  padding: $padding;
+  height: $line-height;
+  line-height: $line-height;
+  background-color: $background-color;
+  color: #fff;
+  white-space: nowrap;
   overflow: hidden;
 }
 /*webkit-sassui-badge End*/
