--- a/src/index.scss
+++ b/src/index.scss
@@ -1,23 +1,16 @@
-/*webkit-sassui-badge Start*/
-$webkit-sassui-badge-options: (
+/*wsui-badge Start*/
+$wsui-badge-options: (
   background-color: #dd514c,
   padding: 0.24em 0.4em,
   line-height: 1.4em
 ) !default;
 
-.webkit-sassui-badge {
-  $background-color: map-get(
-    $map: $webkit-sassui-badge-options,
-    $key: background-color
-  );
-
-  $padding: map-get(
-    $map: $webkit-sassui-badge-options,
-    $key: padding
-  );
+.wsui-badge {
+  $background-color: map-get( $map: $wsui-badge-options, $key: background-color );
+  $padding: map-get( $map: $wsui-badge-options, $key: padding );
 
   $line-height: map-get(
-    $map: $webkit-sassui-badge-options,
+    $map: $wsui-badge-options,
     $key: line-height
   );
 
@@ -32,4 +25,4 @@ $webkit-sassui-badge-options: (
   white-space: nowrap;
   overflow: hidden;
 }
-/*webkit-sassui-badge End*/
+/*wsui-badge End*/
