--- a/src/index.scss
+++ b/src/index.scss
@@ -8,11 +8,7 @@ $wsui-badge-options: (
 .wsui-badge {
   $background-color: map-get( $map: $wsui-badge-options, $key: background-color );
   $padding: map-get( $map: $wsui-badge-options, $key: padding );
-
-  $line-height: map-get(
-    $map: $wsui-badge-options,
-    $key: line-height
-  );
+  $line-height: map-get( $map: $wsui-badge-options, $key: line-height );
 
   font-size: 10px;
   border-radius: 100px;
