--- a/docs/style.css
+++ b/docs/style.css
@@ -2,6 +2,7 @@
 .wsui-badge {
   font-size: 10px;
   border-radius: 100px;
+  min-width: 1em;
   display: inline-block;
   vertical-align: middle;
   padding: 0.24em 0.4em;
