--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,7 @@ $wsui-badge-options: (
 
   font-size: 10px;
   border-radius: 100px;
+  min-width: 1em;
   display: inline-block;
   vertical-align: middle;
   padding: $padding;
